# AutoTest

./: .gitignore  caozuo.md  run_long.py  任务规划.md
api-mcp-server/: api_session.py  pyproject.toml  simple_server.py
api-mcp-server/conf/: api_conf.json  api_conf.template.json
api-mcp-server/llm/: chat.py  prompt.py
api-mcp-server/tools/: assert_tool.py  config_tool.py  extract_tool.py  gen_code_tool.py  http_tool.py  verify_tools.py
api-mcp-server/utils/: config_manager.py  gen_code.py  logger.py  response_format.py
apifox-mcp-server/: apifox_cli.py  pyproject.toml  simple_server.py
apifox-mcp-server/conf/: apifox_conf.template.json
apifox-mcp-server/tools/: diag_tool.py  endpoint_tool.py  scenario_tool.py
apifox-mcp-server/utils/: logger.py  response_format.py
bdd_ai_toolkit/: README.md  package.json  tsconfig.json
bdd_ai_toolkit/resources/trendpower-headless/: README.md  pyproject.toml  runner.py
blueprints/: worker_prompt.txt
docs/: 01-project-overview.md  02-appium-mcp-server.md  03-pywinauto-mcp-server.md  04-bdd-ai-toolkit.md  05-architecture-overview.md
excelio-mcp-server/: dump_queue.py  excel_io.py  mirror_blueprint.py  pyproject.toml  simple_server.py
excelio-mcp-server/tools/: diag_tool.py  read_tool.py  write_tool.py
excelio-mcp-server/utils/: logger.py  response_format.py
pywinauto-mcp-server/: pyproject.toml
qumall-db/: SHARED_DEPLOY.md  cli.py  filter_log.py  import_xlsx.py  (+1 more)
trendpower/trendpower-py/: README.md  pyproject.toml
trendpower/trendpower-py/examples/: basic_anthropic.py  basic_openai.py
trendpower/trendpower-py/trendpower/: __init__.py
trendpower/trendpower-py/trendpower/agent/: __init__.py  agent.py  agent_event.py  agent_middleware.py
trendpower/trendpower-py/trendpower/agent/compaction/: __init__.py  compaction.py
trendpower/trendpower-py/trendpower/agent/compaction/tests/: test_compaction.py
trendpower/trendpower-py/trendpower/agent/skills/: __init__.py  list_skills.py  skill_reader.py  skills_middleware.py  types.py
trendpower/trendpower-py/trendpower/agent/subagent/: __init__.py  runner.py
trendpower/trendpower-py/trendpower/agent/tests/: test_step_limit.py
trendpower/trendpower-py/trendpower/agent/todos/: __init__.py  todos.py  types.py
trendpower/trendpower-py/trendpower/agent/tool_result/: __init__.py  policy.py  runtime.py  summary.py
trendpower/trendpower-py/trendpower/agent/tracing/: __init__.py  events.py  middleware.py  sinks.py
trendpower/trendpower-py/trendpower/agent/tracing/tests/: test_tracing.py
trendpower/trendpower-py/trendpower/coding/: __init__.py  file_change_tracker.py
trendpower/trendpower-py/trendpower/coding/agents/: __init__.py  lead_agent.py
trendpower/trendpower-py/trendpower/coding/permissions/: __init__.py  approval_manager.py  approval_persistence.py  approval_types.py  coding_approval_middleware.py  requires_approval.py
trendpower/trendpower-py/trendpower/coding/tests/: test_file_change_tracker.py
trendpower/trendpower-py/trendpower/coding/tools/: __init__.py  apply_patch.py  ask_user_question.py  ask_user_question_manager.py  bash.py  file_info.py  glob_search.py  grep_search.py  list_files.py  mkdir.py  move_path.py  read_file.py  str_replace.py  task.py  tool_result.py  tool_utils.py  write_file.py
trendpower/trendpower-py/trendpower/coding/tools/tests/: test_task.py
trendpower/trendpower-py/trendpower/community/: __init__.py
trendpower/trendpower-py/trendpower/community/anthropic/: __init__.py  model_provider.py  stream_utils.py  utils.py
trendpower/trendpower-py/trendpower/community/anthropic/tests/: test_prompt_caching.py
trendpower/trendpower-py/trendpower/community/mcp/: __init__.py  config.py  manager.py  session.py  tool_adapter.py  toolset.py  transports.py
trendpower/trendpower-py/trendpower/community/mcp/tests/: _fake_stdio_server.py  test_config.py  test_manager_e2e.py  test_tool_adapter.py
trendpower/trendpower-py/trendpower/community/openai/: __init__.py  model_provider.py  stream_utils.py  utils.py
trendpower/trendpower-py/trendpower/foundation/: __init__.py  abort_signal.py  messages.py  models.py  tools.py
trendpower/trendpower-tui/: .tmp_test_mcp.py  MIGRATION.md  README.md  pyproject.toml
trendpower/trendpower-tui/trendpower_tui/: __init__.py  __main__.py  app.py  model_providers.py  version.py
trendpower/trendpower-tui/trendpower_tui/commands/: __init__.py  cli.py
trendpower/trendpower-tui/trendpower_tui/config/: __init__.py  schema.py  store.py
trendpower/trendpower-tui/trendpower_tui/mcp/: __init__.py  config_loader.py  lifecycle.py
trendpower/trendpower-tui/trendpower_tui/sessions/: __init__.py  store.py
trendpower/trendpower-tui/trendpower_tui/sessions/tests/: test_store.py
trendpower/trendpower-tui/trendpower_tui/settings/: __init__.py  approval_persistence.py  settings.py  settings_loader.py  settings_writer.py
trendpower/trendpower-tui/trendpower_tui/trace/: __init__.py  viewer.py
trendpower/trendpower-tui/trendpower_tui/tui/: agent_runner.py  command_registry.py  file_view.py  skill_paths.py  theme.tcss  todo_view.py  token_usage.py  transcript.py
trendpower/trendpower-tui/trendpower_tui/tui/tests/: test_file_view.py  test_transcript.py
trendpower/trendpower-tui/trendpower_tui/tui/widgets/: __init__.py  approval_bar.py  ask_user_question_bar.py  brand_header.py  code_panel.py  command_list.py  first_run_wizard.py  input_box.py  message_history.py  model_manager.py  resume_screen.py  status_footer.py  streaming_indicator.py  todo_panel.py
trendpower/trendpower-web/: README.md  pyproject.toml
trendpower/trendpower-web/trendpower_web/: __init__.py  app.py  broadcaster.py  cli.py  instrumented_providers.py  server.py  trace_sink.py
trendpower/trendpower-web/trendpower_web/static/: app.css  app.js  index.html
(+63 files in other folders)
