[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trendpower"
version = "0.1.0"
description = "ReAct-style agent loop library for building coding agents in Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "trendpower contributors" }]
dependencies = [
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "pydantic>=2.6.0",
  "python-frontmatter>=1.0.0",
  "aiofiles>=23.2.0",
  "mcp>=1.2.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["trendpower"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
